<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">The Great Equalizer</string>
    <string name="action_load">Load Image</string>
    <string name="action_export">Export</string>
    <string name="nav_light">Light</string>
    <string name="nav_color">Color</string>
    <string name="nav_zoned_tint">Zoned Tint</string>
    <string name="nav_fx">Effects</string>
    <string name="nav_presets">Presets</string>
    <string name="image_description">Processed image</string>
    <string name="add_photo">Add photo</string>
    <string name="action_share">Share</string>
    <string name="action_randomize">Randomize</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="fit_to_input">Fit to Input</string>
    <string name="label_smoothing">Smoothing</string>
    <string name="label_shadows">Shadows</string>
    <string name="label_highlights">Highlights</string>
    <string name="label_midtone_balance">Midtone Balance</string>
    <string name="label_midtone_contrast">Midtones</string>
    <string name="label_blacks">Lift</string>
    <string name="label_whites">Gain</string>
    <string name="label_muted_colors">Muted Colors</string>
    <string name="label_vivid_colors">Vivid Colors</string>
    <string name="label_saturation_balance">Saturation Balance</string>
    <string name="label_vibrancy">Vibrancy</string>
    <string name="label_tint_shadows">Shadows</string>
    <string name="label_tint_midtones">Midtones</string>
    <string name="label_tint_highlights">Highlights</string>
    <string name="title_vignette">Vignette</string>
    <string name="label_vignette_amount">Amount</string>
    <string name="label_vignette_falloff">Falloff</string>
    <string name="title_grain">Grain</string>
    <string name="label_grain_amount">Amount</string>
    <string name="label_grain_size">Size</string>
    <string name="preset_new">New</string>
    <string name="preset_paste">Paste</string>
    <string name="preset_apply">Apply selected preset</string>
    <string name="preset_empty">No presets yet</string>
    <string name="preset_name">Preset name</string>
    <string name="preset_author">Author (optional)</string>
    <string name="preset_settings_to_include">Settings to include in this preset</string>
    <string name="preset_select_all">Select all</string>
    <string name="preset_select_none">Select none</string>
    <string name="preset_save">Save</string>
    <string name="preset_cancel">Cancel</string>
    <string name="preset_copy">Copy preset</string>
    <string name="preset_delete">Delete preset</string>
    <string name="preset_drag">Reorder preset</string>
    <string name="preset_create_title">Create preset</string>
    <string name="preset_overwrite_title">Overwrite preset?</string>
    <string name="preset_overwrite_message">A preset named “%1$s” already exists.</string>
    <string name="preset_delete_title">Delete preset?</string>
    <string name="preset_delete_message">Delete “%1$s”?</string>
    <string name="preset_overwrite">Overwrite</string>
    <string name="preset_delete_action">Delete</string>
    <string name="preset_invalid_title">Invalid preset</string>
    <string name="preset_saved">Preset saved</string>
    <string name="preset_copied">Preset copied</string>
    <string name="preset_pasted">Preset pasted</string>
    <string name="preset_select_setting">Select at least one setting</string>
    <string name="preset_clipboard_empty">Clipboard does not contain text</string>
    <string name="preset_storage_error">Could not save presets: %1$s</string>
</resources>
